新增服务查询接口和服务删除
