# routes/services.router.go
@@ -7,4 +7,5 @@ import (
 
 func SetServicesGroupRoutes(router *gin.RouterGroup) {
 	router.GET("/service_list", controllers.ServicesController.ServicesList)
+	router.GET("/service_delete", controllers.ServicesController.ServicesDelete)
 }
